GCS/gRPC API v2

--- a/e2e-examples/gcs/sample/BUILD
+++ b/e2e-examples/gcs/sample/BUILD
@@ -6,7 +6,7 @@ cc_binary(
         "main.cc",
     ],
     deps = [
-        "//google/storage/v1:storage_cc_grpc",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
