Add optional OpenTelemetry metric exports

--- a/e2e-examples/gcs/benchmark/BUILD
+++ b/e2e-examples/gcs/benchmark/BUILD
@@ -14,44 +14,44 @@
 
 cc_library(
     name = "channel_creator",
-    hdrs = [
-        "channel_creator.h",
-    ],
     srcs = [
         "channel_creator.cc",
     ],
+    hdrs = [
+        "channel_creator.h",
+    ],
     deps = [
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
     ],
 )
 
 cc_library(
     name = "channel_policy",
-    hdrs = [
-        "channel_policy.h",
-    ],
     srcs = [
         "channel_policy.cc",
     ],
+    hdrs = [
+        "channel_policy.h",
+    ],
     deps = [
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
+        "channel_poller",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
-        "channel_poller",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
     ],
 )
 
 cc_library(
     name = "channel_poller",
-    hdrs = [
-        "channel_poller.h",
-    ],
     srcs = [
         "channel_poller.cc",
+    ],
+    hdrs = [
+        "channel_poller.h",
     ],
     deps = [
         "@com_github_grpc_grpc//:grpc++",
@@ -61,11 +61,11 @@ cc_library(
 
 cc_library(
     name = "gcscpp_runner",
-    hdrs = [
-        "gcscpp_runner.h",
-    ],
     srcs = [
         "gcscpp_runner.cc",
+    ],
+    hdrs = [
+        "gcscpp_runner.h",
     ],
     deps = [
         "object_resolver",
@@ -75,34 +75,34 @@ cc_library(
         "runner_watcher",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
-        "@google_cloud_cpp//:storage",
         "@google_cloud_cpp//:experimental-storage_grpc",
+        "@google_cloud_cpp//:storage",
     ],
 )
 
 cc_library(
     name = "grpc_admin",
-    hdrs = [
-        "grpc_admin.h",
-    ],
     srcs = [
         "grpc_admin.cc",
     ],
+    hdrs = [
+        "grpc_admin.h",
+    ],
     deps = [
-        "@com_google_absl//absl/strings",
         "@com_github_grpc_grpc//:grpc++",
         "@com_github_grpc_grpc//:grpcpp_admin",
+        "@com_google_absl//absl/strings",
     ],
 )
 
 cc_library(
     name = "grpc_runner",
-    hdrs = [
-        "grpc_runner.h",
-    ],
     srcs = [
         "grpc_runner.cc",
         "grpc_xtra.cc",
+    ],
+    hdrs = [
+        "grpc_runner.h",
     ],
     deps = [
         "channel_creator",
@@ -113,22 +113,22 @@ cc_library(
         "runner",
         "runner_watcher",
         "work_queue",
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_github_grpc_grpc//src/proto/grpc/health/v1:health_proto",
         "@com_google_absl//absl/crc:crc32c",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
     ],
 )
 
 cc_library(
     name = "object_resolver",
-    hdrs = [
-        "object_resolver.h",
-    ],
     srcs = [
         "object_resolver.cc",
+    ],
+    hdrs = [
+        "object_resolver.h",
     ],
     deps = [
         "@com_google_absl//absl/strings",
@@ -137,11 +137,11 @@ cc_library(
 
 cc_library(
     name = "work_queue",
-    hdrs = [
-        "work_queue.h",
-    ],
     srcs = [
         "work_queue.cc",
+    ],
+    hdrs = [
+        "work_queue.h",
     ],
     deps = [
         "@com_google_absl//absl/synchronization",
@@ -150,67 +150,67 @@ cc_library(
 
 cc_library(
     name = "parameters",
-    hdrs = [
-        "parameters.h",
-    ],
     srcs = [
         "parameters.cc",
+    ],
+    hdrs = [
+        "parameters.h",
     ],
     deps = [
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
         "@com_google_absl//absl/strings:str_format",
-    ],    
+    ],
 )
 
 cc_library(
     name = "random_data",
-    hdrs = [
-        "random_data.h",
-    ],
     srcs = [
         "random_data.cc",
     ],
+    hdrs = [
+        "random_data.h",
+    ],
     deps = [
-        "@com_google_absl//absl/strings:cord",
         "@com_google_absl//absl/random",
+        "@com_google_absl//absl/strings:cord",
     ],
 )
 
 cc_library(
     name = "runner_watcher",
-    hdrs = [
-        "runner_watcher.h",
-    ],
     srcs = [
         "runner_watcher.cc",
     ],
+    hdrs = [
+        "runner_watcher.h",
+    ],
     deps = [
         "parameters",
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
     ],
 )
 
 cc_library(
     name = "runner",
-    hdrs = [
-        "runner.h",
-    ],
     srcs = [
         "runner.cc",
     ],
+    hdrs = [
+        "runner.h",
+    ],
     deps = [
-        "parameters",
         "channel_policy",
         "object_resolver",
+        "parameters",
         "runner_watcher",
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
     ],
 )
 
@@ -224,17 +224,19 @@ cc_binary(
     deps = [
         "channel_creator",
         "channel_policy",
-        "parameters",
-        "runner",
-        "runner_watcher",
         "gcscpp_runner",
         "grpc_admin",
         "grpc_runner",
-        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
+        "parameters",
+        "runner",
+        "runner_watcher",
         "@com_github_grpc_grpc//:grpc++",
         "@com_github_grpc_grpc//test/core/test_util:stack_tracer",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
         "@com_google_absl//absl/strings:str_format",
+        "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
+        "@io_opentelemetry_cpp//exporters/prometheus:prometheus_exporter",
+        "@io_opentelemetry_cpp//sdk/src/metrics",
     ],
 )
