--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,8 @@
 # Bazel 7 begins to enable module by default which breaks gRPC build.
 # Therefore, this option is disabled until gRPC works with bzlmod.
 common --enable_bzlmod=false
+common --enable_workspace=true
 
-# gRPC C++ requires C++14 or higher
-build --cxxopt='-std=c++14'
-build --host_cxxopt='-std=c++14'
+# gRPC C++ requires C++17 or higher
+build --cxxopt='-std=c++17'
+build --host_cxxopt='-std=c++17'
