Updated deps based on google-cloud-cpp-2.35.0

--- a/e2e-examples/gcs/benchmark/BUILD
+++ b/e2e-examples/gcs/benchmark/BUILD
@@ -132,7 +132,7 @@ cc_library(
         "work_queue",
         "@com_google_googleapis//google/storage/v2:storage_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
-        "@com_github_grpc_grpc//src/proto/grpc/health/v1:health_proto",
+        "@com_github_grpc_grpc//src/proto/grpc/health/v1:health_cc_grpc",
         "@com_google_absl//absl/crc:crc32c",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
